--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:6000",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -10,7 +11,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-   
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
